--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Elinor Poole-Dayan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,10 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
+					<h1><strong>Hi! I'm Elinor Poole-Dayan</strong></h1>
 				</div>
 			</header>
 
@@ -29,12 +27,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>I'm a Master's student at the MIT Center for Constructive Communication.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>My research background is in natural language processing (NLP) with a focus on addressing harmful biases in large language models. I am passionate about responsible NLP, AI for social good, and promoting AI literacy. Beyond my academic pursuits, I am enthusiastic about linguistics and abstract math (especially category theory!). In my free time, I enjoy playing ultimate frisbee and nurturing a growing collection of house plants.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="https://drive.google.com/file/d/1WiRfjyYEXaRTuJiXdAiMLatrbOSkwWXN/view?usp=sharing" class="button">My CV</a></li>
 						</ul>
 					</section>
 
