--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot.jpg" alt="" /></a>
-					<h1><strong>Hi! I'm Elinor Poole-Dayan</strong></h1>
+					<a href="#" class="image avatar"><img src="images/headshot.jpg" alt="A headshot of Elinor in a cream colored sweater smiling towards the camera." /></a>
+					<h1><strong>Hi! I'm Elinor Poole-Dayan</strong></h1><br>
+					I'm currently doing my master's at the MIT <a href="https://www.ccc.mit.edu/"></a>Center for Constructive Communication</a> at the Media Lab.<br>
+					I did my undergrad in honours math and computer science <br>
+					at McGill University in Montreal, Canada.
 				</div>
 			</header>
 
@@ -27,11 +30,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>I'm a Master's student at the MIT Center for Constructive Communication.</h2>
+							<h2>I'm passionate about responsible NLP, AI for social good, and promoting AI literacy.</h2>
 						</header>
-						<p>My research background is in natural language processing (NLP) with a focus on addressing harmful biases in large language models. I am passionate about responsible NLP, AI for social good, and promoting AI literacy. Beyond my academic pursuits, I am enthusiastic about linguistics and abstract math (especially category theory!). In my free time, I enjoy playing ultimate frisbee and nurturing a growing collection of house plants.</p>
+						<p>My background is in natural language processing (NLP) with a focus on addressing harmful biases in large language models. I also have experience in vision-and-language models such as Stable Diffusion. Beyond my academic pursuits, I am enthusiastic about linguistics and abstract math (especially category theory!). In my free time, I enjoy playing ultimate frisbee and nurturing a growing collection of house plants.</p>
 						<ul class="actions">
-							<li><a href="https://drive.google.com/file/d/1WiRfjyYEXaRTuJiXdAiMLatrbOSkwWXN/view?usp=sharing" class="button">My CV</a></li>
+							<li><a href="https://drive.google.com/file/d/1WiRfjyYEXaRTuJiXdAiMLatrbOSkwWXN/view?usp=sharing" target="_blank" class="button">My CV</a></li>
 						</ul>
 					</section>
 
@@ -40,16 +43,16 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://arxiv.org/abs/2305.16397" class="image fit thumb"><img src="images/thumbs/debiasing.jpg" alt="" /></a>
+								<h3>Are Diffusion Models Vision-And-Language Reasoners?</h3>
+								<p><a href="https://arxiv.org/abs/2305.16397"> Accepted to NeurIPS 2023!</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://aclanthology.org/2022.acl-long.132/" class="image fit thumb"><img src="images/thumbs/debiasing.jpg" alt="" /></a>
+								<h3>An Empirical Survey of the Effectiveness of Debiasing Techniques for Pre-trained Language Models</h3>
+								<p><a href="https://aclanthology.org/2022.acl-long.132/" target="_blank">Accepted to ACL 2022!</a>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -68,10 +71,10 @@
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://www.media.mit.edu/people/elinorpd/publications/"  target="_blank" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
