--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/headshot.jpg" alt="A headshot of Elinor in a cream colored sweater smiling towards the camera." /></a>
-					<h1><strong>Hi! I'm Elinor Poole-Dayan</strong></h1><br>
-					I'm currently doing my master's at the MIT <a href="https://www.ccc.mit.edu/"></a>Center for Constructive Communication</a> at the Media Lab.<br>
-					I did my undergrad in honours math and computer science <br>
+					<h1><strong>Hi! I'm Elinor Poole-Dayan.</strong></h1><br>
+					I'm currently doing my master's at the MIT <a href="https://www.ccc.mit.edu/">Center for Constructive Communication</a> at the Media Lab.<br>
+					I did my undergrad in honours math and computer science 
 					at McGill University in Montreal, Canada.
 				</div>
 			</header>
@@ -73,13 +73,13 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article> -->
 						</div>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="https://www.media.mit.edu/people/elinorpd/publications/"  target="_blank" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
-					<section id="three">
+					<!-- <section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -114,7 +114,7 @@
 								</ul>
 							</div>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Four -->
 				<!--
@@ -440,14 +440,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/elinorpd_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/elinorpd/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/elinor-poole-dayan/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://scholar.google.com/citations?user=QGDuhYgAAAAJ&hl=en" class="icon solid fa-graduation-cap"><span class="label">Google Scholar</span></a></li>
 					</ul>
-					<ul class="copyright">
+					<!-- <ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</footer>
 
