fix portfolio images

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 						<header class="major">
 							<h2>I'm passionate about responsible NLP, AI for social good, and promoting AI literacy.</h2>
 						</header>
-						<p>My background is in natural language processing (NLP) with a focus on addressing harmful biases in large language models. I also have experience in vision-and-language models such as Stable Diffusion. Beyond my academic pursuits, I am enthusiastic about linguistics and abstract math (especially category theory!). In my free time, I enjoy playing ultimate frisbee and nurturing a growing collection of house plants.</p>
+						<p>My background is in natural language processing (NLP) with a focus on addressing harmful biases in large language models. I also have experience in vision-and-language models such as Stable Diffusion.<br>
+						Beyond my academic pursuits, I am enthusiastic about linguistics and abstract math (especially category theory!). In my free time, I enjoy playing ultimate frisbee and nurturing a growing collection of house plants.</p>
 						<ul class="actions">
 							<li><a href="https://drive.google.com/file/d/1WiRfjyYEXaRTuJiXdAiMLatrbOSkwWXN/view?usp=sharing" target="_blank" class="button">My CV</a></li>
 						</ul>
@@ -43,12 +44,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://arxiv.org/abs/2305.16397" class="image fit thumb"><img src="images/thumbs/debiasing.jpg" alt="" /></a>
+								<a href="images/fulls/debiasing.jpg" class="image fit thumb"><img src="images/thumbs/debiasing.jpg" alt="" /></a>
 								<h3>Are Diffusion Models Vision-And-Language Reasoners?</h3>
 								<p><a href="https://arxiv.org/abs/2305.16397"> Accepted to NeurIPS 2023!</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://aclanthology.org/2022.acl-long.132/" class="image fit thumb"><img src="images/thumbs/debiasing.jpg" alt="" /></a>
+								<a href="images/fulls/diffusion.jpg" class="image fit thumb"><img src="images/thumbs/diffusion.jpg" alt="" /></a>
 								<h3>An Empirical Survey of the Effectiveness of Debiasing Techniques for Pre-trained Language Models</h3>
 								<p><a href="https://aclanthology.org/2022.acl-long.132/" target="_blank">Accepted to ACL 2022!</a>
 							</article>
