--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/debiasing.jpg" class="image fit thumb"><img src="images/thumbs/debiasing.jpg" alt="" /></a>
+								<a href="images/fulls/debiasing.png" class="image fit thumb"><img src="images/thumbs/debiasing.png" alt="" /></a>
 								<h3>Are Diffusion Models Vision-And-Language Reasoners?</h3>
 								<p><a href="https://arxiv.org/abs/2305.16397"> Accepted to NeurIPS 2023!</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/diffusion.jpg" class="image fit thumb"><img src="images/thumbs/diffusion.jpg" alt="" /></a>
+								<a href="images/fulls/diffusion.png" class="image fit thumb"><img src="images/thumbs/diffusion.png" alt="" /></a>
 								<h3>An Empirical Survey of the Effectiveness of Debiasing Techniques for Pre-trained Language Models</h3>
 								<p><a href="https://aclanthology.org/2022.acl-long.132/" target="_blank">Accepted to ACL 2022!</a>
 							</article>
